base de datos funcional

--- a/src/assets/i18n/ca.json
+++ b/src/assets/i18n/ca.json
@@ -5,6 +5,7 @@
   "ENERGYVALUE": "Valor energètic per volum (ml)",
   "UPIMAGE": "Pujar imatge",
   "ADDBUTTON": "Afegir",
+  "UPDATEBUTTON": "Actualitzar",
 
   "BEERCATALOGTITLE": "Catàleg de cerveses",
   "ADDBEERBUTTON": "+ Afegir nova cervesa",
