--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,6 +5,7 @@
   "ENERGYVALUE": "Energy value for volume (ml)",
   "UPIMAGE": "Upload image",
   "ADDBUTTON": "Add",
+  "UPDATEBUTTON": "Update",
 
   "BEERCATALOGTITLE": "Beer catalog",
   "ADDBEERBUTTON": "+ Add new beer",
