--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -5,6 +5,7 @@
   "ENERGYVALUE": "Valor energético por volumen (ml)",
   "UPIMAGE": "Subir imagen",
   "ADDBUTTON": "Agregar",
+  "UPDATEBUTTON": "Actualizar",
 
   "BEERCATALOGTITLE": "Catálogo de cervezas",
   "ADDBEERBUTTON": "+ Añadir nueva cerveza",
