--- a/src/assets/i18n/ca.json
+++ b/src/assets/i18n/ca.json
@@ -9,6 +9,9 @@
 
   "BEERCATALOGTITLE": "Catàleg de cerveses",
   "ADDBEERBUTTON": "+ Afegir nova cervesa",
+  "VALUEENERGY": "Valor energètic",
+  "IMAGE": "Imatge",
+  "DELETE": "Eliminar",
 
   "DAILYSUMMARYTITLE": "Resum del dia",
   "KCALWORN": "Kcal gastades avui",
