--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,6 +9,9 @@
 
   "BEERCATALOGTITLE": "Beer catalog",
   "ADDBEERBUTTON": "+ Add new beer",
+  "VALUEENERGY": "Energy value",
+  "IMAGE": "Image",
+  "DELETE": "Delete",
 
   "DAILYSUMMARYTITLE": "Summary of the day",
   "KCALWORN": "Kcal worn today",
