--- a/src/assets/i18n/ca.json
+++ b/src/assets/i18n/ca.json
@@ -12,6 +12,7 @@
   "VALUEENERGY": "Valor energètic",
   "IMAGE": "Imatge",
   "DELETE": "Eliminar",
+  "EDIT": "Editar",
 
   "DAILYSUMMARYTITLE": "Resum del dia",
   "KCALWORN": "Kcal gastades avui",
