--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -12,6 +12,7 @@
   "VALUEENERGY": "Energy value",
   "IMAGE": "Image",
   "DELETE": "Delete",
+  "EDIT": "Edit",
 
   "DAILYSUMMARYTITLE": "Summary of the day",
   "KCALWORN": "Kcal worn today",
