--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -12,7 +12,7 @@
   "VALUEENERGY": "Valor energético",
   "IMAGE": "Imagen",
   "DELETE": "Eliminar",
-  
+  "EDIT": "Editar",
 
   "DAILYSUMMARYTITLE": "Resumen del día",
   "KCALWORN": "Kcal gastadas hoy",
